[package]
name = "rust_frequency_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
count-min-sketch = "0.1.7"

[dependencies]

[[bench]]
name = "bench_main"
harness = false